--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
+    "django>=4.2.18",
+    "environs>=14.1.0",
+    "requests>=2.32.3",
 ]
 
 [project.urls]
