--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ requires-python = ">=3.9"
 dependencies = [
     "django>=4.2.18",
     "environs>=14.1.0",
+    "pillow>=11.1.0",
     "requests>=2.32.3",
 ]
 
