--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
+    "django-tasks>=0.6.1",
     "django>=4.2.18",
     "environs>=14.1.0",
     "pillow>=11.1.0",
